--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <script>
         (async () => {
-            const files = await fetch("../src");
-            console.log(files);
+            const res = await fetch("../src/1-50/1-10/1.js");
+            console.log(res);
         })();
     </script>
     Docs
