--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script>
         (async () => {
-            const res = await fetch("../src/1-50/1-10/1.js");
+            const res = await fetch("/src/1-50/1-10/1.js");
             console.log(res);
         })();
     </script>
