--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 const file = await fetch(path);
 
                 document.write(`<h3>Problem ${i + 1}</h3>`);
-                document.write(file.data);
+                console.log(file);
             }
         })();
     </script>
