--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
                 const path = `https://raw.githubusercontent.com/oathompsonjones/Project-Euler/master/src/${outerFolder}/${innerFolder}/${i + 1}.js`;
 
                 const file = await fetch(path);
+                const text = await file.text();
 
                 document.write(`<h3>Problem ${i + 1}</h3>`);
-                console.log(file.text());
+                document.write(`<pre><code>${text}</code></pre>`);
             }
         })();
     </script>
