--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Project Euler</title>
 </head>
 
 <body>
     <script>
         (async () => {
-            for (let i = 0; i < 49; i++) {
+            const MAX_PAGES = 5;
+
+            let page = parseInt(document.URL.split("?page=")[ 1 ]);
+            if (isNaN(page) || page < 1) page = 1;
+            if (page > MAX_PAGES) page = MAX_PAGES;
+
+            const start = Math.floor(page / 10) * 10 + 1;
+            const end = start + 9;
+
+            for (let i = start; i < end; i++) {
                 const outerFolderMin = Math.floor(i / 50) * 50 + 1;
                 const outerFolderMax = outerFolderMin + 49;
                 const outerFolder = `${outerFolderMin}-${outerFolderMax}`;
@@ -26,8 +37,16 @@
                 document.write(`<h3>Problem ${i + 1}</h3>`);
                 document.write(`<pre><code>${text}</code></pre>`);
             }
+
+            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/?page=${page - 1}">Previous</a></li>`);
+            for (let i = 0; i < MAX_PAGES; i++)
+                document.write(`<li class="page-item"><a class="page-link" href="/?page=${i + 1}">${i + 1}</a></li>`);
+            document.write(`<li class="page-item"><a class="page-link" href="/?page=${page + 1}">Next</a></li></ul></nav>`);
         })();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
