--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 document.write(`<pre><code>${text}</code></pre>`);
             }
 
-            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/?page=${page - 1}">Previous</a></li>`);
+            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page - 1}">Previous</a></li>`);
             for (let i = 0; i < MAX_PAGES; i++)
-                document.write(`<li class="page-item"><a class="page-link" href="/?page=${i + 1}">${i + 1}</a></li>`);
-            document.write(`<li class="page-item"><a class="page-link" href="/?page=${page + 1}">Next</a></li></ul></nav>`);
+                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
+            document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page + 1}">Next</a></li></ul></nav>`);
         })();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
