--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
             const MAX_PAGES = 5;
 
             let page = parseInt(document.URL.split("?page=")[ 1 ]);
-            if (isNaN(page) || page < 1) page = 1;
-            if (page > MAX_PAGES) page = MAX_PAGES;
+            if (isNaN(page) || page < 1) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=1`);
+            if (page > MAX_PAGES) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=${MAX_PAGES}`);
+
+            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page - 1}">Previous</a></li>`);
+            for (let i = 0; i < MAX_PAGES; i++)
+                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
+            document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page + 1}">Next</a></li></ul></nav>`);
 
             const start = Math.floor((page - 1) / 10) * 10 + 1;
             const end = start + 9;
