--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             if (isNaN(page) || page < 1) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=1`);
             if (page > MAX_PAGES) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=${MAX_PAGES}`);
 
-            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page - 1}">Previous</a></li>`);
-            for (let i = 0; i < MAX_PAGES; i++)
-                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
-            document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page + 1}">Next</a></li></ul></nav>`);
+            const writeNav = () => {
+                document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.max(page - 1, 1)}">Previous</a></li>`);
+                for (let i = 0; i < MAX_PAGES; i++)
+                    document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
+                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.min(page + 1, MAX_PAGES)}">Next</a></li></ul></nav>`);
+            };
+
+            writeNav();
 
             const start = Math.floor((page - 1) / 10) * 10 + 1;
             const end = start + 9;
@@ -43,10 +47,7 @@
                 document.write(`<pre><code>${text}</code></pre>`);
             }
 
-            document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page - 1}">Previous</a></li>`);
-            for (let i = 0; i < MAX_PAGES; i++)
-                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
-            document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${page + 1}">Next</a></li></ul></nav>`);
+            writeNav();
         })();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
