--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             const MAX_PAGES = 5;
 
             let page = parseInt(document.URL.split("?page=")[ 1 ]);
+            console.log(page);
             if (isNaN(page) || page < 1) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=1`);
             if (page > MAX_PAGES) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=${MAX_PAGES}`);
+            console.log(page);
 
             const writeNav = () => {
                 document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.max(page - 1, 1)}">Previous</a></li>`);
