--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             writeNav();
 
-            const start = Math.floor((page - 1) / 10) * 10;
+            const start = Math.floor(page - 1) * 10;
             const end = start + 9;
 
             console.log({ start, end });
