--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             if (page > MAX_PAGES) window.location.replace(`${document.URL.split("?page=")[ 0 ]}?page=${MAX_PAGES}`);
 
             const writeNav = () => {
-                document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.max(page - 1, 1)}">Previous</a></li>`);
+                document.write(`<nav aria-label="Pages"><ul class="pagination"><li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.max(page - 1, 1)}"><</a></li>`);
                 for (let i = 0; i < MAX_PAGES; i++)
                     document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${i + 1}">${i + 1}</a></li>`);
-                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.min(page + 1, MAX_PAGES)}">Next</a></li></ul></nav>`);
+                document.write(`<li class="page-item"><a class="page-link" href="/Project-Euler/?page=${Math.min(page + 1, MAX_PAGES)}">></a></li></ul></nav>`);
             };
 
             writeNav();
