--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div style="flex: 1;"></div>
                 <input type="number" id="input" placeholder="Enter a problem">
             </div>
-            <a>
+            <a id="link" href="">
                 <h2 id="title"></h2>
             </a>
             <pre id="code-wrapper" style="display: none;">
@@ -59,6 +59,7 @@
         <script>
             const input = document.getElementById("input");
             const title = document.getElementById("title");
+            const link = document.getElementById("link");
             const code = document.getElementById("code");
             const codeWrapper = document.getElementById("code-wrapper");
 
@@ -76,7 +77,7 @@
                 const { value } = input;
 
                 if (value > 0) {
-                    title.href = `https://projecteuler.net/problem=${value}`;
+                    link.href = `https://projecteuler.net/problem=${value}`;
                     title.textContent = `Problem ${value}`;
                     codeWrapper.style.display = "flex";
                     fetch(getFile(value))
