Change default text colour

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         input {
             border: 3px solid gray;
             border-radius: 1rem;
+            color: lightgray;
             display: flex;
             padding: 1rem;
         }
