Redirect to oathompsonjones.co.uk/project-euler
The GitHub graphql api often returns out of date results, so until that updates to reflect the homepage field set on GitHub, this redirect will solve the issue

--- a/index.html
+++ b/index.html
@@ -1,199 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
-        <style>
-            /* Layout */
-            body {
-                display: grid;
-                grid-template-columns: [full-start] 1fr [content-start] 1fr [content-end] 1fr [full-end];
-                max-width: 100%;
-            }
-
-            main {
-                display: flex;
-                flex-direction: column;
-                grid-column: content;
-                justify-content: center;
-            }
-
-            header {
-                display: grid;
-                grid-column: full;
-                grid-template-columns: [title-start] 1fr [title-end];
-                justify-content: center;
-                padding: 1rem;
-            }
-
-            header>h1 {
-                grid-column: title;
-            }
-
-            header>button {
-                grid-column: title-end;
-            }
-
-            h1,
-            h2 {
-                text-align: center;
-            }
-
-            /* Font */
-            * {
-                font-family: "Fira Code", monospace;
-            }
-
-            /* Colour */
-            :root {
-                color-scheme: dark;
-                --background: rgb(30, 33, 39);
-                --text: white;
-            }
-
-            @media (prefers-color-scheme: light) {
-                :root {
-                    color-scheme: light;
-                    --background: white;
-                    --text: black;
-                }
-            }
-
-            body,
-            a,
-            input {
-                background-color: var(--background);
-                color: var(--text);
-            }
-
-            /* Code */
-            code {
-                border: 3px solid gray;
-                border-radius: 1rem;
-                overflow: auto;
-                padding: 1rem;
-            }
-
-            /* Inputs */
-            button,
-            input {
-                background: none;
-                border: none;
-                color: inherit;
-                cursor: pointer;
-                font: inherit;
-                outline: inherit;
-                padding: 0;
-                text-align: center;
-                width: 2em;
-            }
-
-            input::-webkit-outer-spin-button,
-            input::-webkit-inner-spin-button {
-                -webkit-appearance: none;
-                margin: 0;
-            }
-
-            input[type=number] {
-                appearance: textfield;
-                -moz-appearance: textfield;
-            }
-
-            #ligature-toggle {
-                float: right;
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <h1>&lt;&lt;===||Project Euler||===&gt;&gt;</h1>
-            <button id="ligature-toggle" onclick="toggleLigatures()">
-                <h2>&lt;/&gt;</h2>
-            </button>
-        </header>
-        <main>
-            <h2>
-                <button onclick="prev()">&lt;|</button>
-                <a id="link" href="">Problem</a>
-                <input type="number" id="input" min="1">
-                <button onclick="next()">|&gt;</button>
-            </h2>
-            <pre><code class="language-typescript" id="code">404: Not Found</code></pre>
-            <h2>Utils</h2>
-            <pre><code class="language-typescript" id="utils">404: Not Found</code></pre>
-        </main>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-        <script>
-            /*** Elements ***/
-            const input = document.getElementById("input");
-            const link = document.getElementById("link");
-            const code = document.getElementById("code");
-            const utils = document.getElementById("utils");
-
-            /*** Functions ***/
-            function getFile(problem) {
-                const p = (n) => `${n}`.padStart(3, "0");
-                const closest50 = problem % 50 === 0 ? problem : Math.floor(problem / 50) * 50 + 50;
-                const closest10 = problem % 10 === 0 ? problem : Math.floor(problem / 10) * 10 + 10;
-                const path = `/src/${p(closest50 - 49)}-${p(closest50)}/${p(closest10 - 9)}-${p(closest10)}/${p(problem)}.ts`;
-                return `https://raw.githubusercontent.com/oathompsonjones/Project-Euler/master/${path}`;
-            }
-
-            function inputHandler() {
-                // Ensure input is valid
-                if (input.value < 1)
-                    return;
-
-                // Update URL
-                window.location.hash = `problem=${input.value}`;
-
-                // Fetch and highlight code
-                fetch(getFile(input.value))
-                    .then((response) => response.text())
-                    .then((text) => code.innerHTML = hljs.highlight(text, { language: "typescript" }).value);
-
-                // Update elements
-                link.href = `https://projecteuler.net/problem=${input.value}`;
-            }
-
-            function prev() {
-                input.value = Math.max(1, Number(input.value) - 1);
-                inputHandler();
-            }
-
-            function next() {
-                input.value = Number(input.value) + 1;
-                inputHandler();
-            }
-
-            function toggleLigatures() {
-                const selectors = document.querySelectorAll("*");
-                for (const selector of selectors)
-                    selector.style.fontVariantLigatures = selector.style.fontVariantLigatures === "contextual" ? "none" : "contextual";
-            }
-
-            /*** Event Listeners ***/
-            input.addEventListener("input", inputHandler);
-
-            /*** Initial setup ***/
-            // Fetch and highlight utils
-            fetch("https://raw.githubusercontent.com/oathompsonjones/Project-Euler/master/src/utils.ts")
-                .then((response) => response.text())
-                .then((text) => utils.innerHTML = hljs.highlight(text, { language: "typescript" }).value);
-
-            // Load problem from URL
-            if (input.value === "")
-                input.value = window.location.hash.match(/#problem=\d+/) ? window.location.hash.match(/\d+/)[ 0 ] : 1;
-
-            // Initial input handler
-            inputHandler();
-
-            // Enable ligatures
-            toggleLigatures();
-
-            // Highlight all code
-            hljs.highlightAll();
-        </script>
-    </body>
-</html>
+<meta http-equiv="refresh" content="0;url=https://oathompsonjones.co.uk/project-euler">
